[package]
name = "hashy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
hex = "0.4"
lazy_static = "1.4.0"
nom = "8.0.0"
rayon = "1.10.0"
structopt = "0.3"
tempfile = "3"
